    . Compatibility with Windows 10 SDK latest version to enable vpDisplayGDI usage
    . Compatibility with Fedora 30
    . New option to select CXX standard set by default to c++11
    . Introduce a timeout (default to 50ms) during DataMatrix code detection
      implemented in vpDetectorDataMatrixCode class
  - Tutorials
    . New tutorial: Installation from source for Windows with Visual C++ 2019 (vc16)
    . new tutorial: Cross-compilation for UWP from Windows host with Visual C++ 2019 (vc16)
  - Bug fixed
    . [#523] dpkg-shlibdeps produces an error during Debian packaging
    . [#525] Tests are failing during Debian package build in a container
    . [#546] ViSP doesn't build when C++11 off and PCL on
    . [#549] Bug in unsigned int vpBSpline::findSpan(double u)
    . [#554] Bug in SaveRealSenseData.cpp prevents install on windows
    . [#559] AprilTag detector freeze with msvc built when more than 1 thread is used
    . [#564] visp_java build fails when OpenCV and libjpeg or libpng are not used
    . [#570] Could not get left and right Infrared images from RealSense D435
    . [#573] VISP fails to build with cmake 3.14.3 and PCL 1.9.1
    . [#574] Compatibility problem with PCL > 1.9.1
----------------------------------------------
ViSP 3.2.0 (released January 23, 2019)
  - Contributors:
    . This release was possible thanks to contributions from Fabien Spindler,
      Souriya Trinh, Olivier Kermorgant, Mathieu Simon, Francois Chaumette,
      Marc Pouliquen, Jason Chevrie, Yash Kapoor, Tianhuanyu, Yasutomo Shirahama,
      ashwinpathak20
    . Google Summer of Code 2018: Akshay Sharma that ported ViSP to Java and Android,
      and Utkarsh Tripathi that developped the wrapper between ViSP and Unity.
  - New features
    . Turn cxx11 on by default
    . Introduce vpSerial class to handle serial communication
    . New vpRobotFranka class, examples and test showing how to use Panda robot
      from Franka Emika
    . In MBT: