@@ -31,6 +31,8 @@ ViSP 3.2.1 (under work)
     . New option to select CXX standard set by default to c++11
     . Introduce a timeout (default to 50ms) during DataMatrix code detection
       implemented in vpDetectorDataMatrixCode class
+    . New vpForceTorqueAtiNetFTSensor class to get F/T measurements from an ATI F/T sensor
+      connected to a Net FT box
   - Tutorials
     . New tutorial: Installation from source for Windows with Visual C++ 2019 (vc16)
     . new tutorial: Cross-compilation for UWP from Windows host with Visual C++ 2019 (vc16)
